add shipping info

--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -28,7 +28,7 @@ Auftragstypen -> separate Test-Seite)
 Aufträge verwalten (alte UI), verweisen
 
 4. Auftragsdokumente
-siehe Liste
+siehe Liste - durch team-docs-automation
 
 // TODO: auf neue UI anpassen, Text siehe
 grundeinstellungen.adoc
@@ -114,7 +114,7 @@ Du kannst eine xref:artikel:detailansicht.adoc#200[neue Detailansicht erstellen]
 Du findest folgende Neuerungen, die es vorher in der "alten UI" nicht gab:
 //// 
 * Du kannst jetzt ...
-* MyView
+* MyView nutzen
 * Gruppenfunktion ...
 * Bereiche anpassen und umbenennen
 * Toolbar über dem Auftrag 
@@ -143,12 +143,11 @@ Tabelle individualisieren:
 . Wähle aus, welche Spalten angezeigt werden sollen. Beachte dafür entsprechend <<table-order-overview>> oder <<table-order-items>>.
 . Verschiebe (icon:sort[set=material]) die Spalten, so dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
-//TODO: Links anpassen
 
 [TIP]
 Du kannst die Reihenfolge per Drag-and-drop mit einem Klick auf *Verschieben* (icon:drag_indicator[set=material]) verändern. Durch “Haken setzen" oder " Haken herausnehmen” kannst du wählen, welche Spalten angezeigt werden sollen bzw. die Anzahl der Spalten verändern.
 
-Folgende Informationen werden dir in der Tabelle Auftragsübersicht angezeigt:
+Folgende Informationen werden dir maximal in der Tabelle Auftragsübersicht angezeigt (ansonsten je nach Auswahl):
 
 [[table-order-overview]]
 .Auftragsübersicht
@@ -308,9 +307,16 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 // TODO: Link
 
-|*Tags*
+| *Tags*
 |Dem Auftrag zugeordnete Tags werden angezeigt. +
 Dies ist eine optionale Spalte.
+
+// TODO: NEU Sprint 6
+| *Versandprofil*
+|Das Versandprofil wird angezeigt.
+
+| *Versanddienstleister*
+|Der Versanddiensteister wird angezeigt.
 
 |====
 
@@ -441,7 +447,7 @@ Nutze die Pfeile, um zur nächsten Seite oder zurück zu wechseln. Du kannst die
 Klicke auf icon:more_vert[set=material], um das Kontextmenü zu öffnen. Dort stehen dir, je nach Auftragstyp, verschiedene Aktionen zu Verfügung.
 
 * icon:note_add[set=material] - *Dokument erstellen*
-* icon:input[set=material] - *Watenausgang buchen*
+* icon:output[set=material] - *Warenausgang buchen*
 * Symbol ? - *Referenzierte Bestellungen anzeigen*
 * Symbol ? *Zahlung buchen*
 * icon:delete[set=material] - *Auftrag löschen*
@@ -1179,7 +1185,7 @@ Wählst du *a) pro Auftrag kann ein Lager zugeordnet werden*, dann kann das Lage
 |Wähle einen Eigner über die Dropdownliste.
 
 | *Status der Reparatur*
-|Wähle
+|Wähle einen Status.
 
 |====
 
@@ -1369,11 +1375,6 @@ Durch Klick auf die ID wird die Variation geöffnet.
 |*Nettopreis*
 |Der Nettopreis wird angezeigt. +
 Über icon:edit[set=material] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst.
-//// 
-Nettopreis
-Bei dem Bearbeiten von Positionen im Auftrag kann man in der neuen UI nicht nur den Bruttopreis bearbeiten, sondern auch den Nettopreis. Der Stift Bearbeiten ist für Nettopreis dazu gekommen. 
-Bei Standardeinstellung wird der ... Der manuelle Preis ...
-////
 
 |*Bruttopreis*
 |Der Bruttopreis wird angezeigt.
@@ -1565,16 +1566,15 @@ Im Bereich *Auftragsreferenzen* siehst du die mit dem Auftrag verbundenen Inform
 
 | *Beziehung*
 |Die Beziehung zum Auftragstyp wird angezeigt.
-Parent - child
 
 | *ID*
-|Die *ID* wird angezeigt.
+|Die ID des Auftrags wird angezeigt.
 
 | *Typ*
 |Der Auftragstyp wird angezeigt.
 
 | *Dokument*
-|Wähle
+|Wähle ??
 
 | *Status*
 |Der *Status* der Bearbeitung wird angezeigt.
@@ -1682,22 +1682,22 @@ a|Im Ordner *Archivierte Dokumente* findest du:
 // TODO: siehe dazu auftragsdokumente.adoc
 
 | *Name*
-|Der *Name* des Dokuments wird angezeigt.
+|Der Name des Dokuments wird angezeigt.
 
 | *Nummer*
-|Die *Nummer* des Dokuments wird angezeigt.
+|Die Nummer des Dokuments wird angezeigt.
 
 | *Typ*
-|Der *Typ* des Dokuments wird angezeigt.
+|Der Typ des Dokuments wird angezeigt.
 
 | *Referenz*
-|Die *Referenz* wird angezeigt.
+|Die Referenz wird angezeigt.
 
 | *Lager*
-|Das *Lager* wird angezeigt.
+|Das Lager wird angezeigt.
 
 | *Eigner*
-|Der *Eigner* wird angezeigt.
+|Der Eigner wird angezeigt.
 
 | *Letzte Änderung*
 |Das Datum der letzten Änderung wird angezeigt.
@@ -1722,19 +1722,19 @@ Im Bereich *Historie* siehst du eine Übersicht der getätigten Aktionen mit Sta
 |Einstellung|Erläuterung
 
 | *Datum*
-|Das *Datum* wird mit Uhrzeit angezeigt.
+|Das Datum wird mit Uhrzeit angezeigt.
 
 | *Benutzer*
-|Der *Benutzer* wird angezeigt.
+|Der Benutzer wird angezeigt.
 
 | *Aktion*
-|Die durchgeführte *Aktion* wird angezeigt.
+|Die durchgeführte Aktion wird angezeigt.
 
 | *Status*
-|Der aktuelle *Status* wird angezeigt.
+|Der aktuelle Status wird angezeigt.
 
 | *Datum*
-|Das *Datum* wird mit Uhrzeit angezeigt.
+|Das Datum wird mit Uhrzeit angezeigt.
 
 |====
 
@@ -1762,33 +1762,33 @@ Gehe folgendermaßen vor, um Waren zurückzubuchen:
 2+^| *Artikel*
 
 | *Menge*
-|Die *Menge* wird angezeigt.
+|Die Menge wird angezeigt.
 
 | *Offene Menge*
-|Die *Offene Menge* wird angezeigt.
+|Die Offene Menge wird angezeigt.
 
 | *Verbleibende Menge*
-|Die *Verbleibende Menge* wird angezeigt.
+|Die Verbleibende Menge wird angezeigt.
 
 | *Charge*
-|Die *Charge* wird angezeigt.
+|Die Charge wird angezeigt.
 
 | *Mindesthaltbarkeitsdatum (MHD)*
-|Das *MHD* wird angezeigt.
+|Das Mindesthaltbarkeitsdatum wird angezeigt.
 
 | *Artikel-ID*
-|Die *Artikel-ID* wird angezeigt. (Link)
+|Die Artikel-ID wird angezeigt. (Link)
 
 | *Attribute*
 | Die Attribute werden angezeigt.
 
 | *Varianten-ID*
-|Die *Varianten-ID* wird angezeigt.
+|Die Varianten-ID wird angezeigt.
 
 | *Artikelname*
-|Die *Artikelname* wird angezeigt.
+|Die Artikelname wird angezeigt.
 
-Rechts kannst du über icon:add_shopping_cart[set=material] Artikel zum Warenkorb hinzufügen. Ist das Icon grau, ist die maximale offene Menge erreicht.
+Rechts kannst du über icon:add_shopping_cart[set=material] Artikel zum Warenkorb hinzufügen. Ist icon:add_shopping_cart[set=material] grau, ist die maximale offene Menge erreicht.
 
 2+^| *Warenkorb*
 // TODO: Reihenfolge siehe oben.
@@ -1812,22 +1812,127 @@ Die Menge der zurück zu buchenden Waren/Artikel kann nicht höher sein als die 
 |Das MHD wird angezeigt.
 
 | *Artikel-ID*
-|Die *Artikel-ID* wird angezeigt.
+|Die Artikel-ID wird angezeigt.
 
 | *Varianten-ID*
-|Die *Varianten-ID* wird angezeigt.
+|Die Varianten-ID wird angezeigt.
 
 | *Variantenname*
-|Die *Variantenname* wird angezeigt.
+|Die Variantenname wird angezeigt.
 
 | *Rückbuchung*
 |Die Anzahl der Rückbuchung wird angezeigt und kann über hoch/runter verändert werden. Die Offene Menge wird automatisch angepasst.
 
 |====
 
-//// 
-in Entwicklung, erklären lassen;
+ 
+// TODO: anpassen
+[#460]
+=== Warenbestand zurückbuchen
 
+Wenn du einen Artikel über eine Retoure zurück erhältst, kannst du den Warenbestand ganz oder teilweise zurückbuchen oder auch den gesamten Warenausgang zurücksetzen.
+
+[.instruction]
+Warenbestand zurückbuchen:
+
+. Öffne das Menü *Aufträge » Aufträge [Testphase]*.
+. Wähle in den Filtereinstellungen unter *Auftragstyp* die Option *Retoure*.
+. Klicke auf *Suchen* (icon:search[role="blue"]). +
+→ Die Retourenaufträge werden aufgelistet.
+. Öffne die Retoure, für die der Bestand zurückgebucht werden soll.
+. Über dem Bereich *Übersicht* findest du icon:input[set=material] *Waren zurückbuchen*.
+. Klicke darauf. 
+→ Der Arbeitsbereich öffnet sich.
+
+// TODO: Ablauf
+. Klicke auf Icon 3 Striche plus *Füge alle offenen Mengen in den Warenkorb*. 
+
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
+
+Die Vorgehensweise zum Zurückbuchen des Warenbestands ist auch für Retouren zu Aufträgen mit Lieferaufträgen gleich. Dass Lieferaufträge vorhanden sind, wird dir im Bearbeitungsfenster für das Rückbuchen angezeigt. Du kannst die Spalten nach deinem Bedarf konfigurieren.
+In der Seitennavigation links wird dir icon:input[set=material] *Waren zurückbuchen* in blauer Schrift angezeigt.
+
+[[table-reversing-stock-return]]
+.Waren zurückbuchen
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *Warenausgang komplett zurücksetzen* ??
+|Setzt den Warenausgang vollständig zurück. Auch das Datum des Warenausgangs wird gelöscht.
+. Klicke auf Icon 3 Striche plus *Füge alle offenen Mengen in den Warenkorb*.
+
+2+^| *Warenbestand zurückbuchen*
+
+| *Menge*
+|Trägt die Menge...
+
+| *Offene Menge abwählen*
+|Die Offene Menge...
+
+| *Verbleibende Stückzahl*
+|Trägt die Menge...
+
+| *Charge*
+|Zeigt die Chargennumer des Artikels an.
+
+| *MHD*
+|Zeigt das Mindeshaltbarkeitsdaum des Artikels an.
+
+| *Artikel-ID*
+|Die ID des Artikels wird angezeigt.
+
+| *Attribute*
+|Die Attribute des Artikels werden angezeigt.
+
+| *Artikel-ID*
+|ID des Artikels.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Artikelname*
+|Der Name des Artikels wird angezeigt.
+
+
+2+^| *Name*
+
+| *Artikel-ID*
+|Die ID des Artikels wird angezeigt.
+
+| *Artikelname*
+|Der Name des Artikels wird angezeigt.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Charge*
+|Zeigt die Chargennumer des Artikels an.
+
+| *MHD*
+|Zeigt das Mindeshaltbarkeitsdaum des Artikels an.
+
+| *Lager*
+|Das Lager wählen, in das die Artikel zurückgebucht werden sollen.
+
+| *Auftragsmenge*
+|Zeigt die Chargennumer des Artikels an.
+
+| *Rückbuchung*
+|Zeigt bereits zurückgebuchte Artikelmengen an.
+
+| *Lagerort*
+|Den Lagerort wählen, in den die Artikel zurückgebucht werden sollen.
+
+|====
+
+[TIP]
+.Retouren-Artikel im Zulauf
+====
+Im Menü xref:warenwirtschaft:rueckstandsliste-verwalten.adoc#400[Waren » Retouren » Zulauf] findest du eine Übersicht aller durch Retouren im Zulauf befindlichen Artikel.
+====
+
+//// 
 siehe auch https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/mhd-charge-verwalten.html und https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/warenbestaende-verwalten.html#100 bzw. mdh_charge_verwalten.adoc
 https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/praxisbeispiel-bestand-umbuchen.html
 
@@ -1839,7 +1944,7 @@ siehe Bestand überwachen Kap. 4.1 MDH und Charge sowie Ware einbuchen
 === Auftragsdetails
 
 Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die xref:auftraege:auftraege-verwalten.adoc#250[Standardeinstellungen]. Beachte dazu auch <<table-order-details-new-order>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
-// TODO: alle xref prüfen/anpassen
+// TODO: alle xref anpassen
 
 [[table-order-details-new-order]]
 .Neuer Auftrag: Auftragsdetails
@@ -1871,13 +1976,12 @@ Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört
 |Welche Optionen dir angezeigt werden, hängt von den Grundeinstellungen ab, die du für die xref:auftraege:grundeinstellungen.adoc#intable-warehouse-assignment[Zuordnung von Lagern] gewählt hast: +
 - Ist *a) pro Auftrag kann ein Lager zugeordnet werden* ausgewählt, kannst du in den Auftragsdetails aus einer Dropdown-Liste ein Lager für den Auftrag auswählen. +
 - Ist *b) pro Artikelposition kann ein Lager zugeordnet werden* ausgewählt, wird dir *Abhängig vom Warenbestand* angezeigt. In der nächsten Ansicht werden dem Auftrag Artikel hinzugefügt, dort kannst du dann für jede Variation ein Lager aus einer Dropdown-Liste auswählen.
+
 // TODO: Hinweis ausformulieren
 Hinweis: 
 Lagerwechsel in Artikel bearbeiten
 Du kannst pro Artikelpoition ein Lager zuweisen. Wenn die Position ausgebucht ist, kannst du sie nicht bearbeiten.
-
 Obere Tabelle bei Lager - Pfeil nach unten - kommt in Tabelle Warenkorb
-
 
 |*Mandant*
 |Wähle aus der Dropdown-Liste den Mandanten aus, für den dieser Auftrag gelten soll. Vorausgewählt ist entweder der Mandant aus den Kontaktdaten oder als nächste Option ein xref:auftraege:auftraege-verwalten.adoc#intable-standard-mandant[Standard-Mandat], wenn du diesen festgelegt hast.
