UPDATE english translation, FIX a few issues noticed during translation

--- a/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen-details.adoc
+++ b/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen-details.adoc
@@ -111,13 +111,11 @@ Du willst für jeden Kopfhörer angeben, welche Profile unterstützt werden, z.B
 
 | *Position* +
 ([red]#Pflichtfeld#)
-|Gib eine Positionsnummer für die Eigenschaft ein.
-Standardmäßig wird aufsteigend nach Positionsnummer sortiert.
+|Welche Eigenschaft soll als erste, zweite, dritte, usw. angezeigt werden?
+Gib eine Positionsnummer in dieses Feld ein.
+Wenn eine Variante mehrere Eigenschaften hat, werden die Eigenschaften aufsteigend nach Positionsnummern in deinem plentyShop dargestellt.
 
 *_Tipp_*: Speichere die Positionsnummern in 10er-Schritten, damit du mögliche neue Eigenschaften dazwischen einfügen kannst.
-
-//hat die Positionsnummer eine Auswirkung für Varianten? Falls ja, dann diesen Text für item anzeigen lassen
-//Welche Eigenschaft soll als erste, zweite, dritte, usw. angezeigt werden? Gib eine Positionsnummer in dieses Feld ein. Wenn eine Variante mehrere Eigenschaften hat, werden die Eigenschaften aufsteigend nach Positionsnummern in deinem plentyShop dargestellt.
 |===
 
 //end::item[]
