--- a/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
+++ b/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
@@ -326,10 +326,45 @@ The following sub-chapters describe how to <<create-properties, create>>, <<#lin
 
 Go to *Setup » Settings » Properties » Configuration* and create properties. Afterwards, <<#link-properties, link>> the property with the contact. Proceed as described below to create a property.
 
-:crm:
 include::_includes:page$creating-new-properties.adoc[]
 
-:!crm:
+[#property-details]
+==== Details
+
+include::_includes:page$creating-new-properties-details.adoc[tag=crm]
+
+[#property-names]
+==== Names
+
+include::_includes:page$creating-new-properties-names.adoc[tag=crm]
+
+[#property-selection-values]
+==== Selection values
+
+[IMPORTANT]
+.Not visible for every type of property
+====
+You will only see this area if you are working with a property of the type *Selection* or *Multi selection*.
+This area is invisible for all of the other property types.
+====
+
+include::_includes:page$creating-new-properties-selectionvalues.adoc[]
+
+[#property-groups]
+==== Groups
+
+include::_includes:page$creating-new-properties-groups.adoc[]
+
+[#property-visibilities]
+==== Visibilities
+
+include::_includes:page$creating-new-properties-visibilities.adoc[tag=crm]
+
+[#property-options]
+==== Options
+
+include::_includes:page$creating-new-properties-options.adoc[tag=crm]
+
 
 [#link-properties]
 === Linking properties with the contact
@@ -346,7 +381,7 @@ Linking the property with the contact:
 . Click on *Properties* on the left side. +
 → All properties that are available for the contact are displayed and you add them there.
 
-//// 
+////
 letzten Satz in der Konfig prüfen.
 ////
 
