--- a/docs/en-gb/modules/stock-management/pages/properties.adoc
+++ b/docs/en-gb/modules/stock-management/pages/properties.adoc
@@ -148,10 +148,7 @@ For example, the information that a storage location is suitable for items needi
 
 Create the properties that you’ll use to characterise your storage locations, e.g. the note “suitable for refrigerated items”.
 
-. Go to *Setup » Settings » Properties » Configuration*.
-. Click on icon:plus[role="darkGrey"] *Create property*.
-. Customise the settings to meet your needs.
-. *Save* (icon:save[set=plenty, role="darkGrey"]) the settings.
+include::_includes:page$creating-new-properties.adoc[]
 
 //#GIF#
 
@@ -160,92 +157,14 @@ Create the properties that you’ll use to characterise your storage locations, 
 [#62]
 ==== Details
 
-[cols="1,4a"]
-|===
-|Setting |Explanation
-
-| *ID*
-|As soon as you save the property, it automatically receives a consecutive and unique ID.
-This ID cannot be changed.
-
-| *Section* +
-([red]#Mandatory field#)
-|What do you want to use the property for?
-Choose the appropriate section from the drop-down list.
-Depending on which section you choose here, the rest of the settings in the menu will change.
-
-*_Note_*: This setting can no longer be changed after saving.
-
-*_Note_*: This page explains properties of the section *Storage location*.
-Such properties are used to characterise your storage locations.
-But properties can also be used to characterise xref:item:properties.adoc#500[items] or xref:crm:preparatory-settings.adoc#properties-introduction[contacts].
-Click on the links to learn more about these other use cases.
-
-| *Type* +
-([red]#Mandatory field#)
-|What sort of property do you want to create?
-Select this property type from the drop-down list.
-
-*_Note_*: This setting can no longer be changed after saving.
-
-[cols="1,4a"]
-!====
-!Type !What is the type useful for?
-
-! *None*
-!The property’s name can be displayed.
-This is useful, e.g. to highlight keywords for a storage location (“suitable for refrigerated items”).
-
-! *Selection*
-!Suitable for situations where there are multiple choices, but only one applies to the storage location.
-
-*_Example of use_*: +
-Imagine you have multiple refrigerators and freezers in your warehouse.
-The refrigerators are used to store food at 4° C.
-The freezers are used to store food at -18° C.
-The information "Temperature: 4° C" should be displayed for the refrigerators and the information "Temperature: -18° C" should be displayed for the freezers.
-
-. xref:stock-management:properties.adoc#66[First]: Create the various options - like 4° C and -18° C.
-. xref:stock-management:properties.adoc#70[Second]: While you link the property to your storage locations, you’ll specify which locations should have the value "4° C" and which should have the value "-18° C".
-
-!====
-
-| *Position* +
-([red]#Mandatory field#)
-|Enter a position number for the property.
-Properties are sorted by the position number in ascending order.
-
-*_Tip_*: Count by tens when creating position numbers. This allows you to easily add new properties in between.
-|===
+include::_includes:page$creating-new-properties-details.adoc[tag=stock]
 
 ---
 
 [#64]
 ==== Names
 
-[cols="1,4a"]
-|===
-|Setting |Explanation
-
-| *Name* +
-([red]#Mandatory field#)
-|Enter a name for the property in the specified language.
-
-*_Note_*: The name is limited to 255 characters.
-
-*_Note_*: Click on icon:plus[role="darkGrey"] to translate the name into other languages.
-
-| *Description*
-|Enter a description of the property in the specified language.
-
-*_Note_*: Click on icon:plus[role="darkGrey"] to translate the description into other languages.
-
-| icon:plus[role="darkGrey"]
-|Should the property name be available in multiple languages?
-
-. Click on icon:plus[role="darkGrey"] and select a language version from the drop-down list.
-. Enter translations for the name and description.
-|===
+include::_includes:page$creating-new-properties-names.adoc[tag=stock]
 
 ---
 
@@ -259,54 +178,14 @@ You will only see this area if you are working with a property of the type *Sele
 This area is invisible for properties of the type *None*.
 ====
 
-Here you’ll define the individual values that can be selected.
-
-. Click on *Create selection value* (icon:plus[role="darkGrey"]). +
-→ The *Create selection value* window opens.
-. Enter a name for the value in the specified language. +
-*_Note_*: The name is limited to 255 characters.
-There is no visual indication if you exceed this limit.
-When saving the selection value, the name will be cut off after 255 characters.
-. Select a position number if needed.
-. Click on *Save*. +
-→ The value is created and displayed in the overview.
-The value automatically receives a consecutive and unique ID that cannot be changed.
-. Should the selection value’s name be available in multiple languages?
-Then click on the value to open a detailed view.
-There you can enter translations and descriptions for the value.
+include::_includes:page$creating-new-properties-selectionvalues.adoc[]
 
 ---
 
 [#68]
 ==== Groups
 
-[cols="1,4a"]
-|===
-|Setting |Explanation
-
-| *Groups* +
-([red]#Mandatory field#)
-|Every property must belong to at least one group.
-Select the appropriate groups from the drop-down list.
-The selected groups are displayed here as so-called “chips”.
-Click on icon:close[set=darkGrey] to remove a group again.
-
-*_Note_*: This drop-down list only includes xref:item:properties.adoc#1200[property groups that were already created].
-|===
-
-[TIP]
-.Assigning multiple properties to a group
-====
-plentymarkets includes a function, which you can use to simultaneously assign multiple properties to a group.
-
-. Go to *Setup » Settings » Properties » Configuration*.
-. Select the properties (icon:check-square[role="blue"]) that you want to assign to the group.
-. Click on *Link groups* (icon:link[set=material]). +
-→ The *Link groups* window opens.
-. Select one or more property groups (icon:check-square[role="blue"]).
-. Click on *Link*. +
-→ The selected properties will be assigned to the groups.
-====
+include::_includes:page$creating-new-properties-groups.adoc[]
 
 [#70]
 === Linking properties with storage locations
