--- a/docs/de-de/modules/_includes/pages/neue-gruppe-erstellen.adoc
+++ b/docs/de-de/modules/_includes/pages/neue-gruppe-erstellen.adoc
@@ -18,22 +18,24 @@ Neue Gruppe erstellen:
 Die ID kann nicht geändert werden.
 
 | *Position*
-|Gib eine Positionsnummer für die Eigenschaftsgruppe ein.
-Standardmäßig wird aufsteigend nach Positionsnummer sortiert.
+|
 ifdef::item[]
-Wenn eine Variante Eigenschaften aus mehreren Gruppen hat, werden die Gruppen aufsteigend dargestellt.
+Welche Eigenschaftsgruppe soll als erste, zweite, dritte, usw. angezeigt werden?
+Gib eine Positionsnummer in dieses Feld ein.
+Wenn eine Variante Eigenschaften aus mehreren Gruppen hat, werden die Gruppen aufsteigend nach Positionsnummern in deinem plentyShop dargestellt.
 endif::item[]
 ifdef::crm[]
+Gib eine Positionsnummer für die Eigenschaftsgruppe ein.
+Standardmäßig wird aufsteigend nach Positionsnummer sortiert.
 Wenn ein Kontakt Eigenschaften aus mehreren Gruppen hat, werden die Gruppen aufsteigend dargestellt.
 endif::crm[]
 ifdef::stock[]
+Gib eine Positionsnummer für die Eigenschaftsgruppe ein.
+Standardmäßig wird aufsteigend nach Positionsnummer sortiert.
 Wenn ein Lagerort Eigenschaften aus mehreren Gruppen hat, werden die Gruppen aufsteigend dargestellt.
 endif::stock[]
 
 *_Tipp_*: Speichere die Positionsnummern in 10er-Schritten, damit du mögliche neue Eigenschaftsgruppen dazwischen einfügen kannst.
-
-//hat die Positionsnummer eine Auswirkung für Varianten? Falls ja, dann diesen Text für item anzeigen lassen
-//Welche Eigenschaftsgruppe soll als erste, zweite, dritte, usw. angezeigt werden? Gib eine Positionsnummer in dieses Feld ein.
 
 ifdef::item[]
 | *Gruppentyp*
